@@ -4,7 +4,7 @@
 #
 
 %%section version
-:1
+:2
 %%endsection
 
 %%section defaultshape
@@ -28,7 +28,7 @@
 
 %%section multiracial_table
 #Format
-#	:skin/sex/shapenum/nakedshape/facenum/faceframe/alterface/alterframe/titleface/titleframe
+#	:skin/sex/shapenum/nakedshape/facenum/faceframe/alterface/alterframe/copydata
 #skin = 0-based skin number
 #sex = 1 for female, 0 for male
 #shapenum and nakedshape can be either a shape # or a reference to an imported
@@ -37,14 +37,17 @@
 #facenum is the face shape from faces.vga to use
 #faceframe is the frame of the face to use
 #alterface and alterframe indicate the face/frame to use when flag 33 is set
-:0/0/%0/%6/5000/5/5000/5
-:0/1/%1/%7/5000/4/5000/4
-:1/0/%2/%8/5000/3/5000/3
-:1/1/%3/%9/5000/2/5000/2
-:2/0/%4/%10/5000/1/5000/1
-:2/1/%5/%11/5000/0/5000/0
-:3/0/721/721/0/0/0/0
-:3/1/989/989/0/1/0/0
+#copydata is optional, and can be 0 or 1. If 1, Exult will copy the shape data
+#from the default avatar shapes; if 0, Exult will use the data already available
+#for the shape.
+:0/0/%0/%6/5000/5/5000/5/1
+:0/1/%1/%7/5000/4/5000/4/1
+:1/0/%2/%8/5000/3/5000/3/1
+:1/1/%3/%9/5000/2/5000/2/1
+:2/0/%4/%10/5000/1/5000/1/1
+:2/1/%5/%11/5000/0/5000/0/1
+:3/0/721/721/0/0/0/0/0
+:3/1/989/989/0/1/0/0/0
 %%endsection
 
 %%section unselectable_races_table
