@@ -503,23 +503,22 @@ void Pace_schedule::now_what
 				}
 			if (blocked.tx != -1)		// Blocked?
 				{
-				Shape_info& shinfo = npc->get_info();
-				if (dir == north)
-					blocked = blocked + Tile_coord(0, -shinfo.get_3d_ytiles(), 0);
-				else if (dir == west)
-					blocked = blocked + Tile_coord(-shinfo.get_3d_xtiles(), 0, 0);
-				Game_object *obj = Game_object::find_blocking(blocked);
-				blocked.tx = -1;
-				changedir = true;
-				if (obj && obj->as_actor())
+				Game_object *obj = npc->find_blocking(blocked, dir);
+				if (obj)
 					{
-					Monster_info *minfo = npc->get_info().get_monster_info();
-					if (!minfo || !minfo->cant_yell())
+					blocked.tx = -1;
+					changedir = true;
+					if (obj->as_actor())
 						{
-						npc->say(first_move_aside, last_move_aside);
-							// Wait longer.
-						npc->start(delay, delay);
-						return;
+						Shape_info& shinfo = npc->get_info();
+						Monster_info *minfo = npc->get_info().get_monster_info();
+						if (!minfo || !minfo->cant_yell())
+							{
+							npc->say(first_move_aside, last_move_aside);
+								// Wait longer.
+							npc->start(delay, delay);
+							return;
+							}
 						}
 					}
 				}
@@ -1226,18 +1225,21 @@ void Patrol_schedule::now_what
 			
 			if (blocked.tx != -1)		// Blocked?
 				{
-				Game_object *obj = Game_object::find_blocking(blocked);
-				blocked.tx = -1;
-				changedir = true;
-				if (obj && obj->as_actor())
+				Game_object *obj = npc->find_blocking(blocked, dir);
+				if (obj)
 					{
-					Monster_info *minfo = npc->get_info().get_monster_info();
-					if (!minfo || !minfo->cant_yell())
+					blocked.tx = -1;
+					changedir = true;
+					if (obj->as_actor())
 						{
-						npc->say(first_move_aside, last_move_aside);
-							// Wait longer.
-						npc->start(speed, speed);
-						return;
+						Monster_info *minfo = npc->get_info().get_monster_info();
+						if (!minfo || !minfo->cant_yell())
+							{
+							npc->say(first_move_aside, last_move_aside);
+								// Wait longer.
+							npc->start(speed, speed);
+							return;
+							}
 						}
 					}
 				}
