@@ -114,6 +114,8 @@ struct Skin_data
 	int face_frame;			// normal game.
 	int alter_face_shape;	// Shape and frame for face to be used
 	int alter_face_frame;	// when flag 33 is set.
+	bool copy_info;			// Whether or not Exult should overwrite shape info
+				// with info from the default avatar shape
 };
 
 struct Usecode_function_data
